# shoubiao

./: README.md
慧享智能手表/慧享智能手环/: README.txt
慧享智能手表/慧享智能手环/开发源码/慧享智能手环_源码/完整体手表项目工程/HARDWARE/DHT11/: DHT11.c  DHT11.h
慧享智能手表/慧享智能手环/开发源码/慧享智能手环_源码/完整体手表项目工程/HARDWARE/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
慧享智能手表/慧享智能手环/开发源码/慧享智能手环_源码/完整体手表项目工程/HARDWARE/UI/components/: ui_comp_hook.c
慧享智能手表/慧享智能手环/开发源码/慧享智能手环_源码/完整体手表项目工程/HARDWARE/UI/fonts/: ui_font_kaiti16.c  ui_font_kaiti20.c  ui_font_shu16.c  ui_font_shu20.c
慧享智能手表/慧享智能手环/开发源码/慧享智能手环_源码/完整体手表项目工程/HARDWARE/UI/images/: ui_img_0_png.c  ui_img_1379335529.c  ui_img_15_png.c  ui_img_1809758872.c  ui_img_1969274251.c  ui_img_307400400.c  ui_img_358139227.c  ui_img_4_png.c  ui_img_608756609.c  ui_img_742136671.c  ui_img_9_png.c  ui_img_bs_png.c  ui_img_dgh_png.c  ui_img_di_png.c  ui_img_guanji_png.c  ui_img_lanya_png.c  ui_img_liandu_png.c  ui_img_miaobiao_png.c  ui_img_rili_png.c  ui_img_shezhi_png.c  ui_img_shidu_png.c  ui_img_sx_png.c  ui_img_tq_png.c  ui_img_twlp_png.c  ui_img_wen_png.c  ui_img_wifi_png.c  ui_img_xing_png.c  ui_img_xlxy_png.c  ui_img_zt_png.c
慧享智能手表/慧享智能手环/开发源码/慧享智能手环_源码/完整体手表项目工程/HARDWARE/UI/screens/: ui_MainScreen.c  ui_dateScreen.c  ui_miaobiaoScreen.c  ui_naozhongScreen.c  ui_setsrceen.c  ui_weatherscreen.c  ui_xlxyScreen.c
慧享智能手表/慧享智能手环/开发源码/慧享智能手环_源码/完整体手表项目工程/LIST/: pro.map  startup_stm32f40_41xxx.lst
慧享智能手表/慧享智能手环/开发源码/慧享智能手环_源码/完整体手表项目工程/LVGL/: lv_conf.h~RF2619410.TMP  lv_conf.h~RF2db7db.TMP
慧享智能手表/慧享智能手环/开发源码/慧享智能手环_源码/完整体手表项目工程/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_themes.c  ui_themes.h
慧享智能手表/慧享智能手环/开发源码/慧享智能手环_源码/完整体手表项目工程/UI/fonts/: ui_font_s1time1.c  ui_font_s2time1.c  ui_font_s3time1.c  ui_font_s7time1.c
慧享智能手表/慧享智能手环/开发源码/慧享智能手环_源码/完整体手表项目工程/UI/images/: ui_img_1104748100.c  ui_img_1210737378.c  ui_img_1225357782.c  ui_img_1391674331.c  ui_img_157119362.c  ui_img_1610765691.c  ui_img_1646111717.c  ui_img_1664587152.c  ui_img_1735873665.c  ui_img_1745059841.c  ui_img_1772208564.c  ui_img_177615356.c  ui_img_180574827.c  ui_img_1837323648.c  ui_img_18754430.c  ui_img_2131476430.c  ui_img_2134279843.c  ui_img_255113753.c  ui_img_27480227.c  ui_img_596444357.c  ui_img_608756609.c  ui_img_616669363.c  ui_img_817792301.c  ui_img_832424109.c  ui_img_895372484.c  ui_img_933793681.c  ui_img_shuzi1_png.c  ui_img_shuzi2_png.c  ui_img_shuzi3_png.c
慧享智能手表/慧享智能手环/开发源码/慧享智能手环_源码/完整体手表项目工程/UI/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c  ui_Screen7.c  ui_Screen8.c
慧享智能手表/慧享智能手环/开发源码/慧享智能手环_源码/完整体手表项目工程/USER/: FreeRTOSConfig.h  JLinkLog.txt  main.c  pro.uvguix.22692  pro.uvguix.28097  pro.uvguix.Administrator  pro.uvguix.愚者  pro.uvoptx  pro.uvprojx
(+21 files in other folders)
