SET(SOURCES screens/ui_Screen1.c
    screens/ui_Screen2.c
    screens/ui_Screen3.c
    screens/ui_Screen4.c
    screens/ui_Screen5.c
    screens/ui_Screen8.c
    screens/ui_Screen7.c
    screens/ui_Screen6.c
    ui_theme_manager.c
    ui_themes.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_817792301.c
    images/ui_img_596444357.c
    images/ui_img_180574827.c
    images/ui_img_2131476430.c
    images/ui_img_18754430.c
    images/ui_img_1745059841.c
    images/ui_img_1772208564.c
    images/ui_img_1210737378.c
    images/ui_img_1225357782.c
    images/ui_img_1664587152.c
    images/ui_img_27480227.c
    images/ui_img_895372484.c
    images/ui_img_616669363.c
    images/ui_img_608756609.c
    images/ui_img_157119362.c
    images/ui_img_832424109.c
    images/ui_img_1610765691.c
    images/ui_img_1391674331.c
    images/ui_img_1837323648.c
    images/ui_img_2134279843.c
    images/ui_img_1104748100.c
    images/ui_img_255113753.c
    images/ui_img_933793681.c
    images/ui_img_177615356.c
    images/ui_img_1735873665.c
    images/ui_img_1646111717.c
    images/ui_img_shuzi1_png.c
    images/ui_img_shuzi2_png.c
    images/ui_img_shuzi3_png.c
    fonts/ui_font_s1time1.c
    fonts/ui_font_s2time1.c
    fonts/ui_font_s3time1.c
    fonts/ui_font_s7time1.c)

add_library(ui ${SOURCES})
